fix: fixed horizontal scroll for mobile

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,6 +18,10 @@
     font-weight: 100;
 }
 
+html{
+    overflow-x: hidden;
+}
+
 body{
     overflow-x: hidden;
     font-family: "MuseoSansCyrl300";
